# slope-field-vizualiser

./: .gitignore  LICENSE  README.md  pyproject.toml  technical_report.md
.github/workflows/: build-and-release.yml
api/: schema.json
backend/: __init__.py  app.py  cli.py  db.py  jobs.sqlite  requirements-dev.txt  validation.py  ws.py
backend/parser/: parser.py
backend/solvers/: abstract_solver.py  numba_runner.py  scipy_solver.py
backend/static/: index.html
backend/static/assets/: editor-BRFsMTim.css  editor.worker-DogVlCF9.js  index-Df0wlDnw.css  json.worker-BthQ50h7.js
backend/worker/: manager.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: MonacoEditor.tsx  PlotlyChart.tsx  ThreeScene.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/utils/: validators.ts
scripts/: build_release.sh
tests/backend/: test_parser_and_solvers.py
tests/integration/: test_packaged_install.py
