[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equation-phase-portrait-tool"
version = "0.1.0"
description = "Equation Phase Portrait Tool - local distribution"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "numpy",
  "scipy",
  "aiohttp",
  "websockets",
  "python-multipart",
  "aiofiles",
]

[project.optional-dependencies]
numba = ["numba"]

[project.scripts]
eqpp-server = "backend.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.setuptools.package-data]
"backend" = ["static/**"]

[tool.setuptools]
include-package-data = true